[gd_scene load_steps=10 format=3 uid="uid://d2hyunjbx7qb7"]

[ext_resource type="Script" path="res://src/gdscript/hud/energy_bars/energy_bar.gd" id="2_c6use"]
[ext_resource type="StyleBox" uid="uid://yqtdxtw3vpjp" path="res://scenes/hud/energy_bar_green.tres" id="3_0cuo8"]
[ext_resource type="PackedScene" uid="uid://u1nvhv5ceok" path="res://scenes/hud/BarInfo.tscn" id="3_an05x"]
[ext_resource type="Texture2D" uid="uid://b421l4qq7mg5n" path="res://assets/UI Elements/All-HQ-Assets-D_0007s_0024_Line-energy.png" id="3_fqlbn"]
[ext_resource type="Texture2D" uid="uid://ubsfoucc2064" path="res://assets/UI Elements/All-HQ-Assets-D_0007s_0000_Marks-vertical.png" id="4_uo7q2"]
[ext_resource type="PackedScene" uid="uid://cqn5kk1o4vep4" path="res://scenes/hud/show_hand.tscn" id="6_cdm1e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kaeus"]
bg_color = Color(0.317647, 0.317647, 0.317647, 0)
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_2ecnd"]
atlas = ExtResource("4_uo7q2")
region = Rect2(0, 0, 11, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tix6"]
atlas = ExtResource("4_uo7q2")
region = Rect2(25, 0, 12, 14)

[node name="Energy" type="ProgressBar"]
offset_left = 86.0
offset_top = -2.0
offset_right = 276.0
offset_bottom = 36.0
rotation = -1.5708
theme_override_styles/background = SubResource("StyleBoxFlat_kaeus")
theme_override_styles/fill = ExtResource("3_0cuo8")
max_value = 600.0
step = 1.0
value = 50.0
show_percentage = false
script = ExtResource("2_c6use")

[node name="DemandLine" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, 20)
rotation = 1.5708
texture = ExtResource("3_fqlbn")

[node name="Sprite2D" type="Sprite2D" parent="DemandLine"]
position = Vector2(-27.5, -0.5)
scale = Vector2(1.39474, 1)
texture = SubResource("AtlasTexture_2ecnd")

[node name="Sprite2D2" type="Sprite2D" parent="DemandLine"]
position = Vector2(24.5, -0.5)
scale = Vector2(1.39474, 1)
texture = SubResource("AtlasTexture_4tix6")

[node name="BarInfo" parent="." instance=ExtResource("3_an05x")]
visible = false
layout_mode = 1
offset_left = -94.2
offset_top = -240.6
offset_right = 71.508
offset_bottom = -59.79

[node name="Name" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = -117.0
offset_top = -3.0
offset_right = -32.0
offset_bottom = 23.0
scale = Vector2(1.2, 1.2)
size_flags_horizontal = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Energy :"
horizontal_alignment = 2

[node name="Label" type="Label" parent="Name"]
visible = false
layout_mode = 0
offset_left = 22.5
offset_right = 84.5
offset_bottom = 26.0
text = "Energy :"
horizontal_alignment = 2

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="ShowHand" parent="." instance=ExtResource("6_cdm1e")]
visible = false
position = Vector2(0, -78)
rotation = 1.5708

[node name="Sprite2D" parent="ShowHand" index="0"]
position = Vector2(-34.2916, 1)

[connection signal="pressed" from="BarInfo/MoreInfo" to="." method="_on_more_info_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_bar_button_pressed"]

[editable path="BarInfo"]
[editable path="ShowHand"]
